# examples-cpp

./: CMakeLists.txt  README.md
cmake/: CMakeInclude.txt
examples/: CMakeLists.txt
examples/src/core/: iterate-string.cpp  iterate-vector.cpp  reverse-struct.cpp
examples/src/core/io/input/: cin+getline.cpp  cin.cpp  fscanf+fgets.cpp  fscanf.cpp
examples/src/core/io/output/: cout.cpp  fprintf.cpp  type-limits.cpp
examples/src/core/iterator-1/: Algorithm.cpp  Algorithm.hpp  AlgorithmIterator.cpp  AlgorithmIterator.hpp  Readme.md  main.cpp
examples/src/core/iterator-2/: Algorithm.cpp  Algorithm.hpp  AlgorithmIterator.cpp  AlgorithmIterator.hpp  Iterator.hpp  Readme.md  main.cpp
examples/src/core/iterator-3/: FilterIterator.cpp.hpp  FilterIterator.hpp  Readme.md  main.cpp
examples/src/node/: AbstractAlgorithm.hpp  AbstractNode.hpp  Readme.md  node.hpp
examples/src/node/graph/: Dijkstra.cpp  Dijkstra.hpp  Edge.cpp  Edge.hpp  Node.cpp  Node.hpp  graph.hpp  main.cpp
examples/src/utils/: object.cpp  string-split.cpp  string-trim.cpp
examples/src/various/: Array.cpp  Array.hpp  Dijkstra.cpp  Dijkstra.txt  Pack.cpp  PassReturn.cpp  PassReturn.hpp  ReturnCopyMove.cpp  TreeNode.cpp  TreeNode.txt
examples/src/various/scale/: Rect.cpp  Rect.hpp  scale.cpp
utils/: CMakeLists.txt
utils/src/utils/: Object.cpp  Object.hpp  log.cpp  log.hpp  string-utils.cpp  string-utils.hpp  utils.hpp
